# DSTT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: DSTT_v2.docx
examples/: demo.cpp  dstt_cli.cpp
include/dstt/core/: afm.hpp  arm.hpp  cfm.hpp  partition.hpp  softmax.hpp  types.hpp
include/dstt/ea/: chromosome.hpp  fitness.hpp  operators.hpp  population.hpp
include/dstt/fdmp/: embeddings.hpp  fdmp.hpp  tokenizer.hpp
include/dstt/mge/: branch_predictor.hpp  mge.hpp  synthesiser.hpp
include/dstt/model/: content_generator.hpp  dstt_format.hpp  dstt_model.hpp
include/dstt/training/: trainer.hpp
include/dstt/utils/: math.hpp  random.hpp  timer.hpp
src/core/: afm.cpp  arm.cpp  cfm.cpp  partition.cpp  softmax.cpp
src/ea/: chromosome.cpp  fitness.cpp  operators.cpp  population.cpp
src/fdmp/: embeddings.cpp  fdmp.cpp  tokenizer.cpp
src/mge/: branch_predictor.cpp  mge.cpp  synthesiser.cpp
src/model/: content_generator.cpp  dstt_model.cpp
src/training/: trainer.cpp
src/utils/: math.cpp  random.cpp
tests/: test_cfm_afm.cpp  test_ea.cpp  test_integration.cpp  test_partition.cpp  test_training.cpp
training_data/: README.md  example.csv  example.jsonl  example.txt
